update page using css stylesheet

--- a/about.html
+++ b/about.html
@@ -3,20 +3,27 @@
 
   <!-- Page header-->
   <head>
-  <!-- Title, name displayed at the top-->
-    <title>T.F. Walterson | About me</title>
+	<link type="text/css", rel="stylesheet", href="stylesheet.css">
+    <title>Fredrik Walterson | About me</title>
   </head> 
 
   <!-- Page body-->
   <body>
   
 	<!-- Main header-->
-	<h1>About me</h1>
+	<div class="header">About me</div>
+	
+	<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a class="active" href="about.html">About me</a></li>
+		<li><a href="contact.html">Contact</a></li>	
+	</ul>
+	
 	<img src="http://www.oocities.org/glovecfg/fredrik.jpg" alt="Fredrik" title="Young Fredrik" width="400" height="300"/>
-	<p style="color: violet; font-size: 16px">I have a degree in Chemical Engineering with Engineering Physics and 
+	<p>I have a degree in Chemical Engineering with Engineering Physics and 
 	a M.Sc. in Complex adaptive systems</p>
-	<p style="color: blue; font-size: 16px">I live in Gothenburg.</p>
-	<p style="color: red; font-size: 16px">I like to play videos games!</p>
+	<p>I live in Gothenburg.</p>
+	<p>I like to play videos games!</p>
 	
 	<!-- Links-->
 	<h2>Other sites:</h2>
@@ -25,8 +32,7 @@
 	 <li><a href="http://followthesymmetry.blogspot.se/">My blog</a></li>
 	</ul>
 	
-	<!-- Main page link-->
-	<h2><a href="index.html">Go to Main page</a></h2>
+	<div class="footer">fredrik.walterson@gmail.com</div>
 	
   </body>
   
