--- a/index.html
+++ b/index.html
@@ -3,44 +3,32 @@
 
   <!-- Page header-->
   <head>
-  <!-- Title, name displayed at the top-->
-    <title>T.F. Walterson | Home</title>
+	<link type="text/css", rel="stylesheet", href="stylesheet.css">
+    <title>Fredrik Walterson | Home</title>
   </head> 
 
   <!-- Page body-->
   <body>
-	<!-- Main header-->
-	<h1>Welcome to T.F. Walterson's homepage!</h1>	
-	<p>Hello! My name is Tor Fredrik, would you like to taste my wiener?</p>
+  
+	<div class="header">Fredrik Walterson's homepage</div>
 	
-	<!-- Sub header-->
-	<section>
-	<h2>Purpose of home page</h2>	
-    <p><strong>I'm a fucking god.</strong>
-	Why do I need to explain myself to you?</p>
-	</section>
-	
-	<!-- Links -->
-	<h2>Links to good stuff</h2>
-	<p>This is <em>good shit</em>, I promise.</p>
 	<ul>
-	  <li>
-		<a href="https://www.reddit.com/r/GlobalOffensive/">
-		  CS:GO Reddit Page
-		</a>
-	  </li>
+		<li><a class="active" href="index.html">Home</a></li>
+		<li><a href="about.html">About me</a></li>
+		<li><a href="contact.html">Contact</a></li>	
 	</ul>
 	
-	<!-- Link to about me section -->
-	<h2><a href="about.html">About me</a></h2>
+	<div class="box">
+	<p>Hi there! I'm glad that you've found my homepage. Enjoy your stay!</p>
 	
 	<!-- Picture link, knugen -->
+	<p>Here's a picture of my spirit animal, the knug!</p>
 	<a href="https://sv.wikipedia.org/wiki/Carl_XVI_Gustaf">
 	<img src="kungen.jpg" alt="Knugen" height="200" width="200" title="The glorious knug" /></a>
-	<p>Take a look at the <strong>knug</strong>, he is <mark>stronk</mark>!</p>
+	<p>Ohh! Ahh! Isn't he <strong>marvelous</strong>?
 	
-	<!-- Troll header-->
-	<h6 style="text-align: center">Get outta hereee!</h6>
+	<div class="footer">fredrik.walterson@gmail.com</div>
+	</div>
 	
   </body>
   
