some visual updates and social media icons

--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html>
-
   <!-- Page header-->
   <head>
-	<link type="text/css", rel="stylesheet", href="stylesheet.css">
+    <link rel="icon" href="guitar.ico" type="image/png">
+    <link type="text/css", rel="stylesheet", href="stylesheet.css">
     <title>Fredrik Walterson | Contact</title>
   </head> 
 
   <!-- Page body-->
   <body>
-  
-	<div class="header">Contact</div>
-	
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About me</a></li>
-		<li><a class="active" href="about.html">Contact</a></li>	
-	</ul>
-	
-	<p>Can't touch me!</p>
-	
-	<div class="footer">fredrik.walterson@gmail.com</div>
-	
+      <div class="header">Contact</div>
+      <ul class="boxheader">
+          <li><a class="boxheader" href="index.html">Home</a></li>
+          <li><a class="boxheader" href="about.html">About me</a></li>
+          <li><a class="boxheader active" href="about.html">Contact</a></li>
+      </ul>
+
+      <!-- Main content -->
+      <div class="centerbox">
+          <h1>Contact information</h1>
+          <p>E-mail: fredrik.walterson@gmail.com</p>
+          <p>Phone number: +46767891170</p>
+      </div>
+
+      <!-- Footer -->
+      <div class="footer">
+          <script language="Javascript">
+          document.write("This page was last modified on: " + document.lastModified);
+         </SCRIPT>
+      </div>
+
   </body>
   
 </html>
