--- a/about.html
+++ b/about.html
@@ -3,37 +3,51 @@
 
   <!-- Page header-->
   <head>
-	<link type="text/css", rel="stylesheet", href="stylesheet.css">
+    <link rel="icon" href="guitar.ico" type="image/png">
+    <link type="text/css", rel="stylesheet", href="stylesheet.css">
     <title>Fredrik Walterson | About me</title>
   </head> 
 
   <!-- Page body-->
   <body>
-  
-	<!-- Main header-->
-	<div class="header">About me</div>
-	
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a class="active" href="about.html">About me</a></li>
-		<li><a href="contact.html">Contact</a></li>	
-	</ul>
-	
-	<img src="http://www.oocities.org/glovecfg/fredrik.jpg" alt="Fredrik" title="Young Fredrik" width="400" height="300"/>
-	<p>I have a degree in Chemical Engineering with Engineering Physics and 
-	a M.Sc. in Complex adaptive systems</p>
-	<p>I live in Gothenburg.</p>
-	<p>I like to play videos games!</p>
-	
-	<!-- Links-->
-	<h2>Other sites:</h2>
-	<ul>
-	 <li><a href="https://www.instagram.com/fredrikwalterson/">My instagram</a></li>
-	 <li><a href="http://followthesymmetry.blogspot.se/">My blog</a></li>
-	</ul>
-	
-	<div class="footer">fredrik.walterson@gmail.com</div>
-	
+    <!-- Main header-->
+    <div class="header">About me</div>
+    <ul class="boxheader">
+        <li><a class="boxheader" href="index.html">Home</a></li>
+        <li><a class="boxheader active" href="about.html">About me</a></li>
+        <li><a class="boxheader" href="contact.html">Contact</a></li>
+    </ul>
+
+    <!-- Main content -->
+    <div class="centerbox">
+    <h1>Background</h1>
+    <figure>
+        <img class="boxed" src="http://www.oocities.org/glovecfg/fredrik.jpg" alt="Fredrik" title="Young Fredrik" width="400" height="300"/>
+        <figcaption>A young padawan at his gaming station, circa 2002-2003.</figcaption>
+    </figure>
+
+    <p>I have a degree in Chemical Engineering with Engineering Physics and
+    a M.Sc. in Complex adaptive systems.</p>
+    <p>I'm working as an algorithm developer at Smart Eye AB, where I'm mostly fiddling with image analysis and computer vision.</p>
+    <p>On my free-time I like to play the electric guitar and videos games!</p>
+    </div>
+
+    <!-- Links-->
+    <div class="table">
+        <ul class="horizontal-list" style="margin: 0px;">
+            <li class="horizontal-list"><a href="https://twitter.com/drfreemayn" class="twitter-follow-button" data-show-count="true">Follow @drfreemayn</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></li>
+            <li class="horizontal-list"><a href="https://www.instagram.com/fredrikwalterson/?ref=badge"><img src="instagram.png" alt="Instagram" /></a></li>
+            <li class="horizontal-list"><iframe class="btn" frameborder="0" border="0" scrolling="no" allowtransparency="true" height="20" width="100" src="https://platform.tumblr.com/v2/follow_button.html?type=follow-blog&amp;tumblelog=drfreeman&amp;color=blue"></iframe></li>
+        </ul>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+        <script language="Javascript">
+        document.write("This page was last modified on: " + document.lastModified);
+        </SCRIPT>
+    </div>
+
   </body>
   
 </html>
