--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       <!-- Footer -->
       <div class="footer">
           <script language="Javascript">
-          document.write("This page was last modified on: " + document.lastModified);
+          document.write("This page was last modified on  1st october: " + document.lastModified);
          </SCRIPT>
       </div>
 
