--- a/about.html
+++ b/about.html
@@ -23,13 +23,13 @@
     <h1>Background</h1>
     <figure>
         <img class="boxed" src="http://www.oocities.org/glovecfg/fredrik.jpg" alt="Fredrik" title="Young Fredrik" width="400" height="300"/>
-        <figcaption>A young padawan at his gaming station, circa 2002-2003.</figcaption>
+        <figcaption>A Young Padawan at his Gaming Station, Circa 2002-2003.</figcaption>
     </figure>
 
     <p>I have a degree in Chemical Engineering with Engineering Physics and
     a M.Sc. in Complex adaptive systems.</p>
     <p>I'm working as an algorithm developer at Smart Eye AB, where I'm mostly fiddling with image analysis and computer vision.</p>
-    <p>On my free-time I like to play the electric guitar and videos games!</p>
+    <p>On my free-time I like to play the electric guitar and Videos games!</p>
     </div>
 
     <!-- Links-->
