--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Main content -->
     <div class="centerbox">
     <h1>Introduction</h1>
-    <p>Hi there! I'm glad that you've found my homepage. Enjoy your stay!</p>
+    <p>Hi there! I'm Glad that you've found my homepage. Enjoy your stay!</p>
 
     <!-- Picture link, knugen -->
     <p>Here's a picture of my spirit animal, the knug!</p>
